changed validation rules for cert create/edit

--- a/app/assets/stylesheets/certs.css.scss
+++ b/app/assets/stylesheets/certs.css.scss
@@ -3,3 +3,14 @@
   They will automatically be included in application.css.
   You can use Sass (SCSS) here: http://sass-lang.com/
 */
+
+.cert_error {
+  color: red;
+  margin-left: 120px;
+  margin-top:  10px;
+}
+
+.action {
+  margin-left: 120px;
+  margin-top:  10px;
+}
