--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -120,8 +120,8 @@
   <div id=x_footer>
     <table width=100%>
       <tr>
-        <td style="font-size: 10px;">Sort items by dragging their handle <img src="/images/handle.png"> up and down<br/>Move high priority items to the top</td>
-        <td style="font-size: 10px;"><span class='green_box'></span> pager alerts enabled<br/><span class='black_box'></span> pager alerts disabled</td>
+        <td style="font-size: 10px;"><span class='green_box'></span> pager alerts enabled</td>
+        <td style="font-size: 10px;"><span class='black_box'></span> pager alerts disabled</td>
       </tr>
     </table>
   </div>
