updated cert display pages

--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -64,10 +64,8 @@
       <%= raw cert_category("SO Background Certs", @member, :background) %>
 
     </div>
-    <div id=x_footer>
-    <table width=100%>
-    </table>
-
+    <div id=x_footer style='font-size: 8pt;'>
+      <span style="background-color: lightgreen;">Green</span>: current cert; <span style="background-color: yellow;">Yellow</span>: expires within 3 months; <span style="background-color: orange;">Orange</span>: expires within 1 month; <span style="background-color: pink;">Pink</span>: expired
     </div>
 
   </div>
