--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -80,8 +80,8 @@
       <table width=100% >
         <tr>
           <td align=left style="font-size: 8pt;">
-            CELL COLOR - Green: current cert; Yellow: expires within 1 month; Orange: expires within 3 months; Pink: expired<br/>
-            TEXT COLOR - Blue: link to documentation; Purple: link to comment; Red member name: no current Medical or CPR
+            CELL COLOR - <span style="background-color: lightgreen;">Green</span>: current cert; <span style="background-color: yellow;">Yellow</span>: expires within 3 months; <span style="background-color: orange;">Orange</span>: expires within 1 month; <span style="background-color: pink;">Pink</span>: expired<br/>
+            TEXT COLOR - <span style='color:blue;'>Blue</span>: link to documentation; <span style='color: purple;'>Purple</span>: link to comment; <span style='color: red;'>Red</span> member name: no current Medical or CPR
           </td>
           <td align=right  style="font-size: 8pt;">
             <b>*</b> indicates multiple certs<br/>
