--- a/app/views/avail_ops/show.html.erb
+++ b/app/views/avail_ops/show.html.erb
@@ -69,7 +69,7 @@
 
 
 
-    <div id=x_footer>
+    <div id=x_footer style='font-size: 10pt;'>
       Instruction: Add busy periods to show when you will be unavailable to reply to pages.
     </div>
 
