--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,8 +52,8 @@
                 <A href='<%= member_avail_ops_path(current_member)%>' class='small'><i>Edit my availability for operations</i></A><br>          <p>
                 <A href="<%= do_assignments_path %>"><b>Duty Officer schedule</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
                 <A href='<%= member_avail_dos_path(current_member) %>' class='small'><i>Edit my DO availability</i></A><br>          <p>
-                <A href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
-                <A href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
+                <A  target='_blank' href="http://bamru.info/calendar"><b>Public webpage calendar</b></A><span class=bullet>&nbsp;&nbsp;&bull;&nbsp;</span>
+                <A  target='_blank' href='http://bamru.info/admin' class='small'><i>Edit the public webpage calendar</i></A>
               </font>
             </td>
           </tr>
