--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -17,7 +17,7 @@
         <thead>
         <tr>
           <th>Name</th>
-          <th>Format</th>
+          <th width=50>Type</th>
           <th>Description</th>
           <th>Action</th>
         </tr>
