--- a/app/views/home/edit_info.html.erb
+++ b/app/views/home/edit_info.html.erb
@@ -1,14 +1,13 @@
-<h2>About Member Records</h2>
-In BAMRU's old system, emergency contacts and misc. data
-were mixed in with personal phone, email and address records.
+<h2>Member Record Cleanup</h2>
+In BAMRU's old system, misc. data is mixed in with phone, email and address records.
 <p></p>
-In our new system, we're trying to migrate non-standard data to
+In our new system, we would like to move non-standard data to
 separate categories: <b>Emergency Contacts</b> and <b>Other Info</b>
 <p></p>
 If you see a record highlighted in light-yellow, please move that record
-to the appropriate category.
+to its appropriate category.
 <p></p>
 <b>OR</b> - you can select a valid type for the record:<br/>
-- for <b>phones</b>, valid types are: Mobile, Home, Work, or Other<br/>
+- for <b>phones</b>, valid types are: Mobile, Home, Work, Pager, or Other<br/>
 - for <b>emails</b>, valid types are: Personal, Work, or Other<br/>
 - for <b>addresses</b>, valid types are: Home, Work, or Other
