--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -39,9 +39,7 @@
     </table>
     <p></p>
   </div>
-  <div id=x_footer>
-    <% if current_member.admin? %>
+  <div id=x_footer style='font-size: 10pt;'>
       <%= link_to "Edit", edit_do_assignment_path(1, @quarter) %>
-    <% end %>
   </div>
 </div>
