--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -39,10 +39,10 @@
     <%= form_for(@member, :html => {:id => 'memberz_form'}) do |f| %>
       <%= render "shared/error_messages", :target => @member %>
       <%= f.text_field :full_name, :size => 28 %><br/>
-      <%= f.select :typ, %w(TM FM T R S A) %>
-      Bd: <%= f.check_box('bd') %>
-      OL: <%= f.check_box('ol') %>
-      <% if @member != current_member %>
+      <% if (@member != current_member) || current_member.admin? %>
+        <%= f.select :typ, %w(TM FM T R S A) %>
+        Bd: <%= f.check_box('bd') %>
+        OL: <%= f.check_box('ol') %>
         <span style="margin-left: 100px;">SysAdmin: <%= f.check_box('admin') %></span>
       <% end %>
       <p></p><b>Phones</b> <span class=add><%= link_to_add_fields("add", f, :phones, {:number => "new phone #..."})%></span>
@@ -103,7 +103,7 @@
     <% end %>
   </div>
   <div id=mem_right_col style="text-align: center;">
-    <p/><%= link_to "Add New Photo", new_member_photo_path(@member) %><p/>
+    <p/><%= (@member.photos.count < 3) ? link_to("Add New Photo", new_member_photo_path(@member)) : "Member Photos" %><p/>
     <div id=sortable_photos>
       <% @member.photos.each do |pic| %>
         <li style="list-style-type: none;" id=photos_<%= pic.id %>>
