fixed maplist formatting

--- a/app/views/reports/BAMRU-roster.html.erb
+++ b/app/views/reports/BAMRU-roster.html.erb
@@ -3,7 +3,7 @@
 <title>BAMRU Maplist</title>
 <%= javascript_include_tag :application %>
 <script type="text/javascript">
-  $(function() {
+  $(document).ready(function() {
     $("table tr:nth-child(even)").addClass("striped");
   });
 </script>
