refactored assets for reports view

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,4 @@
-<%= javascript_include_tag "jquery.tablesorter.min.js" %>
-<%= javascript_include_tag "members.js" %>
-<%= javascript_include_tag "reports_table.js" %>
+<%= javascript_include_tag "reports/all_reports" %>
 
 <div id=x_container>
   <div id=x_body>
