--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,9 @@
 <html>
 <head>
   <title><%= request.host.gsub('bamru','BAMRU')%></title>
-  <%= stylesheet_link_tag :application %>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
-  <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-  <%= javascript_include_tag "jquery_ujs.js" %>
-  <%# javascript_include_tag :application %>
+  <%= stylesheet_link_tag :application %>
+  <%= javascript_include_tag :application %>
   <%= csrf_meta_tag %>
 </head>
 <body id="mybody">
