cleaned up assets for unit_certs

--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -1,11 +1,4 @@
-<%= javascript_include_tag "jquery.tablesorter2.js"        %>
-<%= javascript_include_tag "jquery.tablesorter_filter.js"  %>
-<%= javascript_include_tag "json2.js"                      %>
-<%= javascript_include_tag "cookie.js"                     %>
-<%= javascript_include_tag "members.js"                    %>
-<%= javascript_include_tag "unit_certs_table.js"           %>
-<%= javascript_include_tag "unit_certs_popup.js"           %>
-<%= javascript_include_tag "members_filter.js"             %>
+<%= javascript_include_tag "unit_certs/all_unit_certs" %>
 
 <div id=x_container>
   <div id=x_wide_body>
