--- a/app/views/certs/edit.html.erb
+++ b/app/views/certs/edit.html.erb
@@ -1,11 +1,8 @@
-<script>var autoselectMemberNames = [ <%= Member.autoselect_member_names('/avail_ops') %> ];</script>
-
+<%= javascript_tag "var autoselectMemberNames = [#{Member.autoselect_member_names('/avail_ops')}];" %>
 <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};"  %>
-<%= javascript_tag "var MEMBER_ID = #{@member.id};" %>
-<%= javascript_include_tag "jquery-ui.min.js"       %>
-<%= javascript_include_tag "members_autoselect.js"  %>
-<%= javascript_include_tag "certs_form.js"           %>
+<%= javascript_tag "var MEMBER_ID = #{@member.id};"                        %>
 
+<%= javascript_include_tag "certs/all_certs_edit" %>
 
 <div id=x_container>
   <div id=x_body>
