--- a/app/views/files/index.html.erb
+++ b/app/views/files/index.html.erb
@@ -1,8 +1,5 @@
-<%= javascript_include_tag "jquery.tablesorter2.js"        %>
-<%= javascript_include_tag "jquery.tablesorter_filter.js"  %>
-<%= javascript_include_tag "jquery-ui.min.js"              %>
-<%= javascript_include_tag "members_autoselect.js"         %>
-<%= javascript_include_tag "docs_table.js"                 %>
+<%= javascript_include_tag "files/all_files"  %>
+
 <%= csrf_meta_tag %>
 
 <div id=x_container>
