--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,12 +1,4 @@
-<%= javascript_include_tag "jquery.tablesorter2.js"       %>
-<%= javascript_include_tag "jquery.tablesorter_filter.js" %>
-<%= javascript_include_tag "cookie.js"                    %>
-<%= javascript_include_tag "equal_height.js"              %>
-<%= javascript_include_tag "members.js"                   %>
-<%= javascript_include_tag "members_table.js"             %>
-<%= javascript_include_tag "members_textbox.js"           %>
-<%= javascript_include_tag "members_checkbox.js"          %>
-<%= javascript_include_tag "members_filter.js"            %>
+<%= javascript_include_tag "members/all_mem_indx" %>
 
 <div id=x_container>
   <div id=x_body>
