--- a/app/views/unit_avail_ops/index.html.erb
+++ b/app/views/unit_avail_ops/index.html.erb
@@ -1,9 +1,4 @@
-<%= javascript_include_tag "jquery.tablesorter2.js"        %>
-<%= javascript_include_tag "jquery.tablesorter_filter.js"  %>
-<%= javascript_include_tag "cookie.js"                     %>
-<%= javascript_include_tag "members.js"                    %>
-<%= javascript_include_tag "unit_avail_ops_table.js"       %>
-<%= javascript_include_tag "members_filter.js"             %>
+<%= javascript_include_tag "unit_avail_ops/all_unit_avail_ops" %>
 
 <div id=x_container>
   <div id=x_wide_body>
