--- a/app/assets/stylesheets/scaffold.css.scss
+++ b/app/assets/stylesheets/scaffold.css.scss
@@ -1,8 +1,8 @@
-body { background-color: #fff; color: #333; }
+body {
+  color: #333;
+}
 
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
   line-height: 18px;
 }
 
@@ -15,4 +15,3 @@ pre {
 a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
-
