--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -106,7 +106,7 @@
           <div style="padding:5px;display:inline-block; width:100px;">
             <%= image_tag pic.image.url(:thumb) %>
           </div>
-          <%= link_to 'remove', member_photo_path(@member, pic), :confirm => 'Are you sure?',:method => :delete %>
+          <%= link_to 'remove', member_photo_path(@member, pic), :class => 'add', :confirm => 'Are you sure?',:method => :delete %>
         </li>
       <% end %>
     </div>
