--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -86,8 +86,8 @@
   </div>
 </div>
 
-<div id="blanket" style="display: none;"></div>
-<div id="popup"  style="display: none;">
+<div id="cert_blanket" style="display: none;"></div>
+<div id="cert_popup"  style="display: none;">
   <span id="popname"></span> has entered the following comment:<p></p>
   "<span id="popcomment"></span>"<p></p>
   <a href="#" onclick="close_popup();">Close</a>
