--- a/app/assets/stylesheets/bamru-net.css.scss
+++ b/app/assets/stylesheets/bamru-net.css.scss
@@ -1,10 +1,44 @@
+/* ---------- containers ---------- */
+
+#container {
+  width: 960px;
+  margin: 0 auto;
+  background-color: #ffffff;
+  border: solid 1px black;
+  /*padding: 20px;*/
+  /*margin-top: 0px;*/
+}
+
+#xbody {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
 #mybody {
   background-color: #0099cc;
   font-family: Verdana, Helvetica, Arial;
   font-size: 13px;
 }
 
-.add {
+#subnav {
+  font-size: 10px;
+}
+
+.clear {
+  clear: both;
+  height: 0;
+  overflow: hidden;
+}
+
+.debug {
+  text-align: center;
+  font-size: 11px;
+}
+
+/* ---------- text formatting ---------- */
+
+/* this is for the add & remove links on members#edit */
+.add_remove {
   font-size: 10px;
 }
 
@@ -12,9 +46,29 @@
   background-color: lightgray;
 }
 
-#subnav {
-  font-size: 10px;
+.upp {
+  position: relative;
+  top: -6px;
 }
+
+.sort_handle {
+  cursor: move;
+}
+
+.handle {
+  max-width: 10px;
+  max-height: 10px;
+}
+
+.note {
+  color: #888888;
+  font-size: 10px;
+  line-height: 14px;
+  font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular
+ }
+
+/* ---------- link formatting ---------- */
+
 a img {
   border: none;
 }
@@ -26,6 +80,8 @@ a {
 a.target {
     color: black;
 }
+
+/* ---------- table formatting ---------- */
 
 table.basic {
   background-color: lightblue;
@@ -56,23 +112,7 @@ td.ac {
 
 td.btn {
   border: blue;
-  /*background-color: green;*/
   text-align: center;
-}
-
-.clear {
-  clear: both;
-  height: 0;
-  overflow: hidden;
-}
-
-.debug {
-  text-align: center;
-  font-size: 11px;
-}
-
-pre {
-  font-size: 11px;
 }
 
 .green_button {
@@ -97,35 +137,23 @@ pre {
   text-align: center;
 }
 
-/* Main Container */
-
-#container {
-  width: 960px;
-  margin: 0 auto;
-  background-color: #ffffff;
-  border: solid 1px black;
-  /*padding: 20px;*/
-  /*margin-top: 0px;*/
+body {
+  color: #333;
 }
 
-#xbody {
-  margin-left: 30px;
-  margin-right: 30px;
+body, p, ol, ul, td {
+  line-height: 18px;
 }
 
-/* Help Page */
-
-.side_nav {
-  background-color: #e0ffff;
-  position: relative;
-  width: 20%;
-  float: left;
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px;
 }
 
-.help_body {
-  width: 78%;
-  float: right;
-}
+a { color: #000; }
+a:visited { color: #666; }
+a:hover { color: #fff; background-color:#000; }
 
 /* Header */
 
@@ -161,7 +189,6 @@ pre {
 }
 
 #head_nav_box {
-  /*background-color: bisque;*/
   width: 70%;
   height: 30px;
   text-align: right;
@@ -392,7 +419,6 @@ label.collection_radio {
   background-color: #ff3333;
 }
 
-
 .simple_form .error {
   clear:   left;
   color:   black;
@@ -440,25 +466,3 @@ label.collection_check_boxes {
   text-align: right;
   margin-right: 0px;
 }
-
-.upp {
-  /*padding-bottom: 15px;*/
-  position: relative;
-  top: -6px;
-}
-
-.sort_handle {
-  cursor: move;
-}
-
-.handle {
-  max-width: 10px;
-  max-height: 10px;
-}
-
-/*.body { color: black; font-size: 12px; line-height: 16px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }*/
-.detailname { color: black; font-size: 15px; font-weight: bold; line-height: 19px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
-.detailmembertype { color: #888888; font-size: 12px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
-.note { color: #888888; font-size: 10px; line-height: 14px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
-.addcontact { color: #AAAAAA; font-size: 9px; line-height: 12px; font-family: Verdana, Arial, Helvetica, Geneva, Swiss, SunSans-Regular }
-
