--- a/app/assets/stylesheets/unit_certs.css.scss
+++ b/app/assets/stylesheets/unit_certs.css.scss
@@ -28,7 +28,7 @@
   color: blue;
 }
 
-#blanket {
+#cert_blanket {
 height: 100%;
 width: 100%;
 background: #000000;
@@ -41,9 +41,8 @@ opacity: 0.75;
 filter:alpha(opacity=75);
 }
 
-#popup {
+#cert_popup {
 width:  300px;
-/*height: 300px;*/
 margin: 20px;
 padding: 20px;
 border: 1px solid #000000;
