--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,14 @@
 /*
-*= require_tree .
+*= require_tree ./vendor
+*= require_self
 */
+
+@import "bamru-net.css.scss";
+@import "layout.css.scss";
+@import "certs.css.scss";
+@import "chat.css.scss";
+@import "members.css.scss";
+@import "photos.css.scss";
+@import "unit_certs.css.scss";
+@import "tabs.css.scss";
 
