--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -6,7 +6,7 @@
       <tr>
         <td align=left><b>Duty Officer Schedule</b></td>
         <td align=right>
-          <%= avail_dos_link_next_quarter("Edit my Q#{next_quarter_number} DO Availability") %>
+          <%= avail_dos_link_next_quarter("Edit My Q#{next_quarter_number} DO Availability") %>
         </td>
       </tr>
     </table>
