added forum link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,6 +64,7 @@
             <td valign="top" bgcolor="white">
               <table width=100%>
                 <tr>
+                <td align=center><b><a target='_blank' href="http://health.groups.yahoo.com/group/BAMRU">Forum</a></b></td>
                 <td align=center><b><a target='_blank' href="http://wiki.bamru.net/?username=<%=@current_member.wiki_name%>">Wiki</a></b></td>
                 <td align=center><b><%= link_to "Files", '/files' %></b></td>
               <% if current_member.developer? %>
