added email bounce detection

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,7 @@
 @import "layout.css.scss";
 @import "certs.css.scss";
 @import "chat.css.scss";
+@import "distributions.css.scss";
 @import "members.css.scss";
 @import "photos.css.scss";
 @import "unit_certs.css.scss";
