--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -71,10 +71,10 @@
         </div>
         <div style="font-size: 10px;">
           <i>
-            PLEASE NOTE: Message content, IP addresses, and message recipients are logged for each message sent on this system.
+            PLEASE NOTE: Message content, IP addresses, and alert recipients are logged for each message sent on this system.
             <p/>
             Last message sent on <%= Message.last.created_at.strftime("%a, %b %e at %H:%M:%S") unless Message.last.blank? %><br/>
-            <a href="/messages">View message log</a>
+            <a href="/messages">View unit message log</a>
           </i>
         </div>
         <p/>
