--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,19 +1,66 @@
-<h2>Message Log</h2>
-(back to <%= link_to("Unit Roster", members_path) %>)<p/>
+<%= javascript_include_tag "messages/all_messages_indx" %>
 
-<table border=1>
-  <thead>
-  <tr><th>ID</th></th><th>Content</th><th>Author</th><th>Send Time</th><th>IP Address</th></tr>
-  </thead>
-  <tbody>
-  <% @messages.each do |m| %>
-    <tr>
-      <td style='font-size: 10px;'><%= m.id %></td>
-      <td style='font-size: 10px;' width=550px><%= link_to(m.text, message_path(m)) %></td>
-      <td style='font-size: 10px;'><%= m.author.full_name %></td>
-      <td style='font-size: 10px;'><%= m.created_at %></td>
-      <td style='font-size: 10px;'><%= m.ip_address %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div id=x_container>
+  <div id=x_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td width=250 align=left>
+            <b>Unit Message Log</b>
+          </td>
+          <td align=center>
+            <%= link_to("Unit Roster", members_path) %>
+          </td>
+          <td width=250 align=right>
+            <a href="/members/<%=current_member.id%>/inbox">My Inbox</a>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div id=x_single_col>
+
+      <table id=myTable class="tablesorter">
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th width=320>Message Text</th>
+          <th>From</th>
+          <th>Sent At</th>
+          <th width=120 align=center>Sent | Bounced | Read</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @messages.each do |m| %>
+          <tr>
+            <td><%= m.id %></td>
+            <td><%= link_to(m.text, message_path(m)) %></td>
+            <td><%= link_to(m.author.short_name, member_path(m.author)) %><br/></td>
+            <td><%= m.created_at.strftime("%m-%d %H:%M") %></td>
+            <td align=center>
+              <%= raw sent_display(m.distributions.count) %> |
+              <%= raw bounce_display(m.distributions.bounced.count) %> |
+              <%= raw read_display(m.distributions.count, m.distributions.read.count) %>
+            </td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+    </div>
+    <div id=x_footer >
+      <table width=100% style='font-size: 8pt;'>
+        <tr>
+          <td align=center>
+            Last Mail Sync: <%=@sync_time %>
+          </td>
+          <td align=center>
+            <a href='#' id=resync_link>Resync Now</a> to update <b>Bounced</b> & <b>Read</b> stats.
+          </td>
+        </tr>
+      </table>
+      
+    </div>
+
+  </div>
+</div>
