--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,18 +1,76 @@
-<h2>Message </h2>
-(back to <%= link_to("Unit Roster", members_path) %> | <%= link_to("Message Log", messages_path) %>)<p/>
+<%= javascript_include_tag "messages/all_messages_show" %>
 
-<b/>Message Date:</b> <%= @message.created_at %><br/>
-<b/>Message Auth:</b> <%= link_to(@message.author.full_name, member_path(@message.author)) %><br/>
-<b/>Message Text:</b> <%= @message.text %><br/>
-<b/># of Recipients:</b> <%= @message.recipients.length %><p/>
+<div id=x_container>
+  <div id=x_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td width=50% align=left>
+            <b>Message #<%= @message.id %> Detail</b>
+          </td>
+          <td width=50% align=right>
+            <%= link_to("Unit Message Log", messages_path) %>
+          </td>
+        </tr>
+      </table>
+    </div>
 
-<table border=1>
-  <thead><th>Name</th><th>sent via eMail?</th><th>sent via Phone?</th></thead>
-  <% @message.distributions.each do |d| %>
-    <tr>
-      <td><%= link_to(d.member.full_name, member_path(d.member)) %></td>
-      <td><%= d.email %></td>
-      <td><%= d.phone %></td>
-    </tr>
-  <% end %>
-</table>
+    <div id=x_single_col>
+      <table>
+        <tr>
+          <td align=right width=150><b>Message ID:</b></td>
+          <td><%= @message.id %></td>
+        </tr>
+        <tr>
+          <td align=right width=150><b>Message Date:</b></td>
+          <td><%= @message.created_at.strftime("%y-%m-%d %H:%M:%S") %></td>
+        </tr>
+        <tr>
+          <td align=right><b>Message Author:</b></td>
+          <td><%= link_to(@message.author.full_name, member_path(@message.author)) %></td>
+        </tr>
+        <tr>
+          <td align=right><b>Message Text:</b></td>
+          <td><%= @message.text %></td>
+        </tr>
+        <tr>
+          <td align=right><b>Author IP Address:</b></td>
+          <td><%= @message.ip_address %></td>
+        </tr>
+        <tr>
+          <td align=right><b># of Recipients:</b></td>
+          <td><%= @message.recipients.length %></td>
+        </tr>
+      </table>
+
+      <table id=myTable class="tablesorter">
+        <thead>
+        <th>Recipient</th>
+        <th>Via eMail?</th>
+        <th>Via Phone?</th>
+        <th>Bounced?</th>
+        <th>Read?</th>
+        <th align=center>Detail</th>
+        </thead>
+        <% @message.distributions.each do |d| %>
+          <tr>
+            <td><%= link_to(d.member.full_name, member_path(d.member)) %></td>
+            <td align=center><%= raw yes_no d.email %></td>
+            <td align=center><%= raw yes_no d.phone %></td>
+            <td align=center><%= raw yes_no_bounce d.bounced %></td>
+            <td align=center><%= raw yes_no_read d.read %></td>
+            <td align=center>
+              <%= link_to("mail history", history_path(d))%> |
+              <%= link_to("member inbox", member_inbox_index_path(d.member)) %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+
+    </div>
+    <div id=x_footer style='font-size: 8pt;'>
+      If there are bounced messages, check the <b>mail history</b> to find out what is failing.
+    </div>
+
+  </div>
+</div>
