fixed style problem

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -158,3 +158,8 @@ top: 100px;
 .green_box:hover {
   background-position: -30px 0;
 }
+
+.fields {
+  list-style-type: none;
+  border-style: none;
+}
