--- a/app/views/members/_email_fields.html.erb
+++ b/app/views/members/_email_fields.html.erb
@@ -1,4 +1,4 @@
-<li class=fields style="list-style-type: none; <%= check_style(@xemail) %>" id=email_<%=f.object_id%>>
+<li class=fields style="list-style-type: none; border-style:  none;<%= check_style(@xemail) %>" id=email_<%=f.object_id%>>
   <span class='sort_handle span_handle'><img src="/images/handle.png" class=handle></span>
   <%= f.hidden_field :position, :size => 1 %>
   <%= f.text_field :address, :size => 24 %>
