--- a/app/views/members/_address_fields.html.erb
+++ b/app/views/members/_address_fields.html.erb
@@ -1,5 +1,5 @@
 <li class=fields
-    style="list-style-type: none; <%= check_style(@xadr) %>"
+    style="list-style-type: none; border-style:  none; <%= check_style(@xadr) %>"
     id=address_<%= f.object_id %> >
 <span class='sort_handle span_handle'><img src="/images/handle.png" class=handle></span>
 <%= f.hidden_field :position, :size => 2 %>
