added page redirection for wiki login

--- a/app/views/home/wiki.html.erb
+++ b/app/views/home/wiki.html.erb
@@ -1,3 +1,4 @@
 <b>Wiki Access: <%=current_member.wiki_name%></b>
 <p></p>
-To view the BAMRU Wiki, click <a href="http://wiki.bamru.net/?username=<%=current_member.wiki_name%>">here</a>.
+To view the BAMRU Wiki, click
+<a href="<%= @link %>">here</a>.
