--- a/app/views/notifier/roster_email_message.text.erb
+++ b/app/views/notifier/roster_email_message.text.erb
@@ -2,6 +2,7 @@ Sent by <%= @author %>
 
 <%= @text %>
 
--------------------------------------
-Please reply, to let others know that
-you have read this message.
+--------------------------------------
+Please reply, to let others know you
+have read this message. Learn more at
+http://wiki.bamru.net/index.php/Paging
