--- a/app/views/certs/_form.html.erb
+++ b/app/views/certs/_form.html.erb
@@ -1,16 +1,15 @@
 <%= simple_form_for [@member, @cert] do |f| %>
   <%= f.hidden_field :typ         %>
-  <%= f.input        :expiration  %>
+  <%= f.input        :expiration, :as => :string, :html => {:size => 30}  %>
   <%= f.input        :description, :collection => cert_opts(@cert)%>
   <div id=new_div class="input select optional">
     <label></label>
-    <input id=new_input type=text></select>
+    <input id=new_input type=text>
   </div>
   <%= f.input(:link)                                        if @cert.typ == "ham" %>
   <%= raw current_cert_helper(@cert)                                              %>
   <%= f.input(:cert, :label => cert_image_label(@cert)) unless @cert.typ == "ham" %>
   <%= f.input(:comment)                                 unless @cert.typ == "ham" %>
-  <%# f.submit %>
   <div class=action><a href="#" id=save_link>Save</a> | <%= link_to("Cancel", member_certs_path(@member)) %></div>
   <div class=cert_error>Error: You must add a Cert File OR a Comment</div>
 <% end %>
