--- a/app/views/notifier/roster_email_message.text.erb
+++ b/app/views/notifier/roster_email_message.text.erb
@@ -1,8 +1,10 @@
-Sent by <%= @author %>
-
 <%= @text %>
 
---------------------------------------
+-----------------------------------------
+Sent by <%= @author %>
+Mobile: <%= @mobile %>
+ eMail: <%= @email %>
+-----------------------------------------
 Please reply, to let others know you
 have read this message. Learn more at
 http://wiki.bamru.net/index.php/Paging
